--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CajeroAutomatico.jar
+dist.jar=${dist.dir}/CajeroAutomaticoProyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CajeroAutomatico
+dist.jlink.output=${dist.jlink.dir}/CajeroAutomaticoProyecto
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CajeroAutomatico
+jlink.launcher.name=CajeroAutomaticoProyecto
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
